[workspace]
members = ["quinn", "quinn-proto", "interop", "bench", "perf", "fuzz"]
default-members = ["quinn", "quinn-proto", "interop", "bench", "perf"]

[profile.bench]
debug = true

[profile.release]
debug = true

[patch."crates-io"]
rustls = { git = "https://github.com/djc/rustls", rev = "fd7fd62a031c6ba163d8fd4fe84b9678dcd68481", features = ["quic"] }

[patch."https://github.com/ctz/rustls"]
rustls = { git = "https://github.com/djc/rustls", rev = "fd7fd62a031c6ba163d8fd4fe84b9678dcd68481" }
